--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.10.8",
+    "sweetalert2-react-content": "^5.0.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
